# ws-test-server

./: .clang-format  CMakeLists.txt  CMakeUserPresets.json  conanfile.txt  id.txt  ids.txt  ids_1.txt  ids_5000.txt  ids_5000_2.txt  index.html  readme.md  win-readme.txt
src/: coro_read.hpp  device_payloads.cpp  device_payloads.hpp  main.cpp  server.h  util.cpp  util.hpp  utl_log.hpp  ws_client.cpp  ws_client.h
